# agents-at-scale-ark

./: .all-contributorsrc  .cursorrules  .gitignore  CONTRIBUTING.md  DEMO_GUIDE.md  PHOENIX_ARK_INTEGRATION_ANALYSIS.md  README.md  TEST_KEYCLOAK.md  devspace.yaml  docker-compose.keycloak.yml  marketplace.json  ml-training-pipeline.yaml  plan.md  query-resolution.md
.claude/: README.md  settings.json
.claude-plugin/: marketplace.json
.github/: CHANGELOG.md  dependabot.yaml
.serena/: project.yml
ark/: CLAUDE.md  Makefile  devspace.yaml
demo-resources/: README.md  (+3 more)
services/ark-sessions/ark-sessions/: pyproject.toml
services/ark-sessions/ark-sessions/src/ark_sessions/: __init__.py  __main__.py  main.py
services/ark-sessions/ark-sessions/src/ark_sessions/api/: __init__.py  events.py  health.py  messages.py  models.py  otlp.py  sessions.py  sessions_sse.py
services/ark-sessions/ark-sessions/src/ark_sessions/core/: __init__.py  config.py  database.py  pubsub.py
services/ark-sessions/ark-sessions/src/ark_sessions/models/: __init__.py  models.py
services/ark-sessions/ark-sessions/src/ark_sessions/storage/: __init__.py  events.py  messages.py  sessions.py  traces.py
services/ark-sessions/ark-sessions/tests/: __init__.py  test_health.py
services/ark-sessions/ark-sessions/tests/api/: __init__.py  test_messages.py  test_otlp.py  test_sessions.py
services/ark-sessions/ark-sessions/tests/core/: test_pubsub.py
services/ark-sessions/ark-sessions/tests/storage/: __init__.py  test_events.py  test_messages.py  test_sessions.py  test_traces.py
tests/: CLAUDE.md  (+4 more)
(+1243 files in other folders)
