[project]
name = "ark-sessions"
version = "0.1.0"
description = "ARK Sessions service for OTEL trace ingestion and session management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "sqlmodel>=0.0.27",
    "asyncpg>=0.29.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-proto>=1.20.0",
    "protobuf>=4.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.uv]
package = true

[tool.coverage.run]
data_file = "coverage/.coverage"

[tool.coverage.html]
directory = "coverage"

[tool.coverage.lcov]
output = "coverage/lcov.info"

